# unstructured-ingest

./: .envrc  .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  box_app_config.json  generate_presigned_url.py  pyproject.toml  renovate.json5  results.json  results.ndjson  setup.cfg  setup.py  tasks.py  test_ambient_credentials.py  test_ibm_watsonx_data.py  test_zendesk.sh
.github/: CODEOWNERS
.github/workflows/: cd.yml  cd_project.yml  ci.yml  claude.yml  codeflash.yml  connectors.yml  e2e.yml  ingest-test-fixtures-update-pr.yml  release.yml  setup-environment.yml  unit_tests.yml
debugging/chunk/: 24fc120e9adc.json
debugging/embed/: d9db2c3fffd9.json
debugging/indexer/: d3e24a285084.json
debugging/partition/: 8598c4e156b7.json
docs/: README.md  connector_development.md  v1.md  v2.md
examples/: airtable.py  azure_cognitive_search.py  chroma.py  couchbase.py  databricks_volumes_dest.py  databricks_volumes_source.py  delta_table.py  discord_example.py  elasticsearch.py  google_drive.py  kdbai.py  local.py  milvus.py  mongodb.py  opensearch.py  pinecone.py  s3.py  salesforce.py  sharepoint.py  singlestore.py  sql.py  vectara.py  weaviate.py
examples/notebooks/: databricks_delta_tables.ipynb
requirements/: base.txt  cli.in  cli.txt  lint.in  lint.txt  release.in  release.txt  test.in  test.txt
requirements/common/: base.in  base.txt  constraints.txt  extras.in
requirements/connectors/: airtable.in  airtable.txt  astra.in  astra.txt  astradb.txt  azure-ai-search.txt  azure-cognitive-search.in  azure-cognitive-search.txt  azure.in  azure.txt  biomed.in  biomed.txt  box.in  box.txt  chroma.in  chroma.txt  clarifai.in  clarifai.txt  confluence.in  confluence.txt  couchbase.in  couchbase.txt  databricks-delta-tables.in  databricks-delta-tables.txt  databricks-volumes.in  databricks-volumes.txt  delta-table.in  delta-table.txt  discord.in  discord.txt  dropbox.in  dropbox.txt  duckdb.in  duckdb.txt  elasticsearch.in  elasticsearch.txt  embed-aws-bedrock.in  embed-aws-bedrock.txt  embed-huggingface.txt  embed-octoai.txt  (+81 more)
requirements/embed/: aws-bedrock.in  aws-bedrock.txt  bedrock.txt  huggingface.in  huggingface.txt  mixedbreadai.in  mixedbreadai.txt  octoai.in  octoai.txt  ollama.in  ollama.txt  openai.in  openai.txt  togetherai.txt  vertexai.in  vertexai.txt  voyageai.in  voyageai.txt
requirements/local_partition/: doc.in  doc.txt  docx.in  docx.txt  epub.in  epub.txt  image.in  image.txt  markdown.in  markdown.txt  md.in  md.txt  msg.in  msg.txt  odt.in  odt.txt  org.in  org.txt  pdf.in  pdf.txt  ppt.in  ppt.txt  pptx.in  pptx.txt  rst.in  rst.txt  rtf.in  rtf.txt  tsv.in  tsv.txt  xlsx.in  xlsx.txt
requirements/remote/: client.in  client.txt
scripts/: check_untagged_tests.sh  docker-compose-pull.sh  install-docker-compose.sh  parse_pytest_report.py  pip-compile.sh  url_connector_spike.py  version-sync.sh
test/: test_chunking_utils.py  test_interfaces.py  test_logger.py  test_utils_v2.py
test/cli/: test_cli.py
test/connector/: test_json_schemas.py  test_milvus_stager.py  test_opensearch.py  test_salesforce_connector.py  test_serialization.py  test_sharepoint.py
test/embed/: test_mixedbreadai.py  test_octoai.py  test_ollama.py  test_openai.py  test_vertexai.py  test_voyageai.py
test/enhanced_dataclass/: test_enhanced_dataclass.py
test/integration/: utils.py
test/unit/: test_chunking_utils.py  test_error.py  test_html.py  test_interfaces.py  test_interfaces_v2.py  test_pipeline_interfaces.py  test_utils.py
test_e2e/: .gitignore  check-diff-expected-output.py  check-diff-expected-output.sh  docker-compose.otel.yml  evaluation-metrics.sh  test-dest.sh  test-help.py  test-help.sh  test-ingest-dest.sh  test-ingest-src.sh  test-src.sh
test_e2e/dest/: astra.sh  astradb.sh  azure-cognitive-search.sh  azure.sh  box.sh  chroma.sh  clarifai.sh  couchbase.sh  databricks-volumes.sh  delta-table-s3.sh  delta-table.sh  dropbox.sh  duckdb.sh  elasticsearch.sh  gcs.sh  kafka-local.sh  kdbai.sh  milvus.sh  mongodb.sh  onedrive.sh  opensearch.sh  pgvector.sh  pinecone.sh  qdrant.sh  s3.sh  s3_no_access.sh  sharepoint-embed-cog-index.sh  singlestore.sh  sqlite.sh  vectara.sh  weaviate.sh
test_e2e/files/: azure_ai_index_schema.json
test_e2e/otel_assets/: otel-collector-config.yaml
test_e2e/python/: .env.sample  test-azure-output.py  test-databricks-volumes.py  test-ingest-astradb-output.py  test-ingest-couchbase-output.py  test-ingest-delta-table-output.py  test-ingest-nomicdb.py  test-onedrive-output.py
test_e2e/reference_test_scripts/: README.md  pinecone.sh
test_e2e/src/: against-api.sh  airtable-diff.sh  airtable-large.sh  astra.sh  astradb.sh  azure.sh  biomed-api.sh  biomed-path.sh  box.sh  confluence-diff.sh  confluence-large.sh  couchbase.sh  databricks-volumes.sh  delta-table.sh  discord.sh  dropbox.sh  elasticsearch.sh  gcs.sh  github.sh  gitlab.sh  google-drive.sh  hubspot.sh  jira.sh  kafka-local.sh  local-embed-bedrock.sh  local-embed-mixedbreadai.sh  local-embed-octoai.sh  local-embed-ollama.sh  local-embed-vertexai.sh  local-embed-voyageai.sh  local-embed.sh  local-failed-partition.sh  local-single-file-basic-chunking.sh  local-single-file-chunk-no-orig-elements.sh  local-single-file-with-encoding.sh  local-single-file-with-pdf-infer-table-structure.sh  local-single-file.sh  local.sh  mongodb.sh  notion.sh  (+16 more)
tmp_ingest/index/: 14aeead97f81.json  736c90eeb5bf.json  c18d39ddb447.json  c5f8c6eb812b.json
unstructured_ingest/: README.md  __version__.py  error.py  errors_v2.py  evaluate.py  interfaces.py  logger.py  otel.py  processor.py  unstructured_api.py
unstructured_ingest/cli/: README.md  __init__.py  cli.py  cmd_factory.py  cmds.py  common.py  interfaces.py  utils.py
unstructured_ingest/connector/: airtable.py  astra.py  astradb.py  azure_ai_search.py  azure_cognitive_search.py  biomed.py  chroma.py  clarifai.py  confluence.py  databricks_volumes.py  delta_table.py  discord.py  elasticsearch.py  git.py  github.py  gitlab.py  google_drive.py  hubspot.py  jira.py  kafka.py  local.py  mongodb.py  nomicdb.py  onedrive.py  (+13 more)
(+1842 files in other folders)
