[project]
name = "unstructured_ingest"
description = "Local ETL data pipeline to get data RAG ready"
requires-python = ">=3.10, <3.13"
authors = [{name = "Unstructured Technologies", email = "devops@unstructuredai.io"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
readme = "README.md"
license = "Apache-2.0"
dynamic = ["version"]
dependencies = [
    "python-dateutil",
    # Pydantic generic Secret only introduced in 2.7
    "pydantic>=2.7",
    "tqdm",
    "click",
    "opentelemetry-sdk",
    "certifi>=2026.1.4",
]

[project.optional-dependencies]
# Connectors
airtable = ["pandas<3", "pyairtable"]
astradb = ["astrapy>2.0.0"]
azure-ai-search = ["azure-search-documents"]
azure = ["adlfs", "fsspec"]
biomed = ["beautifulsoup4", "requests"]
box = ["boxfs", "fsspec"]
chroma = ["chromadb"]
clarifai = ["clarifai"]
confluence = ["atlassian-python-api", "requests"]
couchbase = ["couchbase"]
databricks-delta-tables = ["pandas<3", "databricks-sql-connector"]
databricks-volumes = ["databricks-sdk>=0.70.0"]
delta-table = ["pandas<3", "deltalake", "boto3", "tenacity", "pyarrow"]
discord = ["discord.py"]
dropbox = ["dropboxdrivefs", "fsspec"]
duckdb = ["pandas<3", "duckdb"]
elasticsearch = ["elasticsearch[async]<9.0.0"]
gcs = ["gcsfs", "fsspec", "beautifulsoup4"]
github = ["pygithub>1.58.0", "requests"]
gitlab = ["python-gitlab"]
google-drive = ["google-api-python-client", "tenacity"]
hubspot = ["hubspot-api-client", "urllib3"]
ibm-watsonx-s3 = ["pyiceberg", "httpx", "pyarrow", "tenacity", "pandas<3"]
jira = ["atlassian-python-api"]
kafka = ["confluent-kafka"]
kdbai = ["pandas<3", "kdbai-client>=1.4.0"]
lancedb = ["lancedb"]
milvus = ["pymilvus"]
mongodb = ["pymongo"]
neo4j = ["neo4j-rust-ext", "cymple", "networkx"]
notion = ["notion-client", "htmlBuilder", "httpx", "backoff"]
onedrive = ["msal", "Office365-REST-Python-Client", "requests"]
opensearch = [
    # opensearch-py 3.x adds opensearch-protobufs dependency which pulls in grpcio/protobuf,
    # causing version conflicts with pymilvus and pyiceberg. Pin to 2.x to avoid this cascade.
    "opensearch-py>=2.4.0,<3.0.0",
    "boto3>=1.26.0",
    "botocore>=1.29.0",
]
outlook = ["msal", "Office365-REST-Python-Client"]
pinecone = ["pinecone"]
postgres = ["pandas<3", "psycopg2-binary"]
qdrant = ["qdrant-client"]
reddit = ["praw"]
redis = ["redis<=5.3.0"]
s3 = ["s3fs", "fsspec"]
salesforce = ["simple-salesforce"]
sftp = ["fsspec", "paramiko"]
sharepoint = ["msal", "Office365-REST-Python-Client", "requests"]
singlestore = ["pandas<3", "singlestoredb"]
slack = ["slack_sdk[optional]"]
snowflake = ["pandas<3", "snowflake-connector-python", "psycopg2-binary"]
teradata = ["pandas<3", "teradatasql"]
vastdb = ["pandas<3", "pyarrow", "vastdb", "ibis"]
vectara = ["requests", "aiofiles", "httpx"]
weaviate = ["weaviate-client"]
wikipedia = ["wikipedia"]
zendesk = ["httpx", "aiofiles", "beautifulsoup4"]

# Embedders
bedrock = ["boto3", "aioboto3", "aiobotocore[boto3]!=2.24.2"]
huggingface = ["sentence-transformers"]
mixedbreadai = ["mixedbread"]
octoai = ["openai", "tiktoken"]
openai = ["openai", "tiktoken"]
togetherai = ["together"]
vertexai = ["vertexai"]
voyageai = ["voyageai", "langchain-core>=0.3.81,<1.0.0"]

# Remote
remote = ["unstructured-client>=0.30.0"]

# Local partition
doc = ["unstructured[doc]"]
docx = ["unstructured[docx]"]
epub = ["unstructured[epub]"]
image = ["unstructured[image]"]
md = ["unstructured[md]"]
msg = ["unstructured[msg]"]
odt = ["unstructured[odt]"]
org = ["unstructured[org]"]
pdf = ["unstructured[pdf]"]
ppt = ["unstructured[ppt]"]
pptx = ["unstructured[pptx]"]
rst = ["unstructured[rst]"]
rtf = ["unstructured[rtf]"]
tsv = ["unstructured[tsv]"]
xlsx = ["unstructured[xlsx]"]

[tool.hatch.version]
path = "unstructured_ingest/__version__.py"

[dependency-groups]
release = [
    "twine",
    "wheel",
    "build",
]
lint = [
    "ruff",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-check",
    "pytest-asyncio",
    "pytest-tagging",
    "pytest-json-report",
    "pytest-timeout",
    "pytest-xdist",
    "faker",
    "docker",
    "universal_pathlib",
    "deepdiff",
    "beautifulsoup4",
    "pandas<3",
    # Connector specific deps
    "cryptography",
    "fsspec",
    "vertexai",
    "pyiceberg",
    "pyarrow",
    "networkx",
    "htmlBuilder",
    "office365-rest-python-client",
]
# Add constraints needed for CI
ci = [
    "grpcio>=1.65.5",
    # TODO: Pinned in transformers package, remove when that gets updated
    "tokenizers>=0.19,<0.20",
    # TODO: Constraint due to aiobotocore, remove when that gets updated:
    "botocore<1.34.132",
    # TODO: Constraint due to both 8.5.0 and 8.4.0 being installed during pip-compile
    "importlib-metadata>=8.5.0",
    "unstructured-client>=0.25.8",
    "fsspec==2024.5.0",
    # python 3.12 support
    "wrapt>=1.14.0",
    "numpy<2",
    # deltalake >=0.23.0 currently has a bug with the version of pyarrow it installs
    "deltalake<=0.22.0",
    # TODO: investigate breaking changes introduced in lancedb>0.15.0
    "lancedb<=0.15.0",
    # TODO: versions higher than this are missing the macos wheel
    "pykx==2.5.3",
    # TODO: Constraint due to perf-analyzer platform compatibility issues
    "tritonclient<=2.60.0",  # Allow 2.60.0 (was working), prevent 2.61.0 (has perf-analyzer issues)
]

[project.scripts]
unstructured-ingest = "unstructured_ingest.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pyiceberg.*",
    "ignore::pydantic.warnings.PydanticDeprecatedSince212:pyiceberg.*",
    "ignore:Default value.*is not JSON serializable:pydantic.json_schema.PydanticJsonSchemaWarning",
]

[tool.coverage.report]
# TODO: Update as this improves
fail_under = 0

[tool.hatch.build.targets.wheel]
packages = ["/unstructured_ingest"]

[tool.hatch.build.targets.sdist]
packages = ["/unstructured_ingest"]

[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "unstructured_ingest"
tests-root = "test"
test-framework = "pytest"
ignore-paths = []
formatter-cmds = ["ruff check --exit-zero --fix $file", "ruff format $file"]
